# rtlsdr-wwb-scanner

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.md  Rtl WWB Scanner.e4p  kivyapp.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci-tests.yml  packaging-tests.yml  python-package.yml  python-publish.yml  wheel-test.yml
tests/: conftest.py  test_dbstore.py  test_io.py  test_sample_gen.py  test_scan_objects.py
tests/data/: 470_125-534_000.sdb3  572-636.csv  572-636.sdb2
wwb_scanner/: core.py  log_config.py
wwb_scanner/file_handlers/: __init__.py  exporters.py  importers.py
wwb_scanner/scan_objects/: __init__.py  sample.py  samplearray.py  spectrum.py
wwb_scanner/scanner/: __init__.py  config.py  main.py  rtlpower_scan.py  sample_processing.py  sample_processing_experiments.py  sdrwrapper.py
wwb_scanner/ui/: graph_panel.py  mainwindow.py  menubar.py  plots.py  scan_panel.py
wwb_scanner/ui/kivyui/: actions.py  build_icon_font.py  main.kv  main.py  plots.kv  plots.py  rtlsdrscanner.kv  scan.kv  scan.py  treeutils.kv  treeutils.py
wwb_scanner/ui/pyside/: __init__.py  device_config.py  graph.py  main.py  scanner.py  utils.py
wwb_scanner/ui/pyside/qml/: ChartSelect.qml  ChartSelectDelegate.qml  Crosshair.qml  DeviceConfigPopup.qml  ExportDialog.qml  Graph.qml  GraphHViewControls.qml  GraphViewController.qml  ImportDialog.qml  LiveSpectrumGraph.qml  NumberInput.qml  ScanConfig.qml  ScanControls.qml  ScanControlsDialog.qml  SpectrumGraph.qml  UHFChannel.qml  (+6 more)
wwb_scanner/utils/: color.py  config.py  dbmath.py  dbstore.py  numpyjson.py
