[bdist_wheel]
universal = 1

[metadata]
name = rtlsdr-wwb-scanner
version = 0.0.1
author = Matthew Reid
author_email = matt@nomadic-recording.com
url = https://github.com/nocarryr/rtlsdr-wwb-scanner
description = RF Scanner and Exporter for use with Shure Wireless Workbench
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v2 (GPLv2)
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Topic :: Multimedia :: Sound/Audio
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
packages: find:
include_package_data = True
install_requires =
    numpy>=1.24
    scipy
    pyrtlsdr>=0.2.6
    tinydb==3.13.0
    json-object-factory
    PySide2>=5.13.1

[options.packages.find]
exclude =
    tests

[options.package_data]
wwb_scanner = ui/pyside/qml/*.qml
